[gd_scene load_steps=6 format=3 uid="uid://dstkdhmct3mli"]

[ext_resource type="Script" path="res://Scripts/Card.gd" id="1_3fpxi"]
[ext_resource type="Texture2D" uid="uid://clsa731e0y6ck" path="res://UIs/pixelCardAssest_V01.png" id="1_cxomb"]
[ext_resource type="Resource" uid="uid://x2moyujcqflq" path="res://Resources/Cards/DefaultCard.tres" id="2_edstn"]
[ext_resource type="FontFile" uid="uid://nxwkun8omyib" path="res://Fonts/PixelOperator8.ttf" id="2_jv6mw"]
[ext_resource type="FontFile" uid="uid://cb3gcyu5jwksh" path="res://Fonts/PixelOperator8-Bold.ttf" id="3_ke0bd"]

[node name="Card" type="Sprite2D"]
texture = ExtResource("1_cxomb")
centered = false
region_enabled = true
region_rect = Rect2(332, 337, 100, 128)
script = ExtResource("1_3fpxi")
cardResource = ExtResource("2_edstn")

[node name="CardFront" type="Sprite2D" parent="."]
position = Vector2(50, 64)
texture = ExtResource("1_cxomb")
region_enabled = true
region_rect = Rect2(332, 337, 100, 128)

[node name="CardImage" type="Sprite2D" parent="CardFront"]
position = Vector2(0, -5)
texture = ExtResource("1_cxomb")
region_enabled = true
region_rect = Rect2(140, 136, 86, 72)

[node name="CardAliasText" type="Label" parent="CardFront/CardImage"]
offset_left = -43.0
offset_top = -36.0
offset_right = 43.0
offset_bottom = 36.0
theme_override_fonts/font = ExtResource("3_ke0bd")
theme_override_font_sizes/font_size = 48
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardName" type="Sprite2D" parent="CardFront"]
position = Vector2(0, -52)
texture = ExtResource("1_cxomb")
region_enabled = true
region_rect = Rect2(135, 273, 96, 18)

[node name="CardNameText" type="Label" parent="CardFront/CardName"]
anchors_preset = -1
anchor_left = 0.0208333
anchor_right = 0.0208333
offset_left = -46.0
offset_top = -7.0
offset_right = 46.0
offset_bottom = 6.0
theme_override_fonts/font = ExtResource("2_jv6mw")
theme_override_font_sizes/font_size = 8
text = "Default Name"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CardAttack" type="Sprite2D" parent="CardFront"]
position = Vector2(0, 47)
texture = ExtResource("1_cxomb")
region_enabled = true
region_rect = Rect2(135, 224, 96, 29)

[node name="CardAttackText" type="Label" parent="CardFront/CardAttack"]
offset_left = -46.0
offset_top = -13.0
offset_right = 46.0
offset_bottom = 12.0
theme_override_fonts/font = ExtResource("2_jv6mw")
theme_override_font_sizes/font_size = 16
text = "Att: 0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CardBorder" type="Sprite2D" parent="CardFront"]
texture = ExtResource("1_cxomb")
region_enabled = true
region_rect = Rect2(115, 473, 100, 128)

[node name="CardCount" type="Sprite2D" parent="CardFront"]
position = Vector2(33, -48)
scale = Vector2(2, 2)
texture = ExtResource("1_cxomb")
region_enabled = true
region_rect = Rect2(377, 184, 19, 18)

[node name="CardCountText" type="Label" parent="CardFront"]
offset_left = 14.0
offset_top = -66.0
offset_right = 52.0
offset_bottom = -30.0
theme_override_fonts/font = ExtResource("2_jv6mw")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
